--- a/visualizer/package.json
+++ b/visualizer/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "shelljs": "^0.8.5"
   }
 }
