--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,8 @@ out/
 # this is because I'm unsure what copyright / copyleft licenses the audio recordings are licensed under
 in/
 
+# weather data from the BOM may also be protected by IP
+# so therefore, do not upload it
+data/
+
 .Rhistory
