--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,8 @@ data/*.csv
 
 # please use the in/ directory for your audio files
 # this is because I'm unsure what copyright / copyleft licenses the audio recordings are licensed under
-in/
+in/**
+!in/.gitkeep
 
 tmp/
 
